tests/cases/standard-library/ok/std-string-first-last.ari
fn main() -> i64 {
  var zone = zone::create(32);
  var text = std::string::from_string(ref mut zone, "ari");

  let start = text.first();
  let end = text.last();
  text.push_in(ref mut zone, 33u8);
  let bang = text.last();

  let total = (start as i64) + (end as i64) + (bang as i64) + text.len();
  zone::destroy(zone);
  return total % 256;
}
