tests/cases/standard-library/errors/string/std-string-literal-utf8-invalid.ari
fn main() -> i64 {
  let text: std::string::Utf8 = "\xC3\x28";
  return text.len();
}
